<resources>
    <string name="app_name">Prova 1 treino 2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_consulta">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="menu_lista">Lista</string>
    <string name="digite_um_valor_de_1_a_6">Digite um valor de 1 a 6</string>
    <string name="consultar">Consultar</string>
    <string name="consulta_por_id">Consulta por id</string>
    <string name="consulta_por_id_">Consulta por ID</string>
    <string name="erro_consulta">Digite um valor entre 1 e 6!</string>
    <string name="tirar_foto">Tirar foto</string>
    <string name="imagem_tirada_da_camera">imagem tirada da camera</string>
    <string name="voltar">Voltar</string>
    <string name="mapa">Mapa</string>
    <string name="tentativas">Tentativas</string>
    <string name="programacao_para_dispositivos_moveis_ii">Programação para dispositivos móveis II</string>
    <string name="ulisses_da_silva_bembem">Ulisses da Silva Bembem</string>
    <string name="pior_aluno">Pior aluno</string>
</resources>